--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.8.22"
+    "@grpc/grpc-js": "^1.8.22",
+    "soap": "^1.0.4"
   }
 }
